feat: prepare repository for public release
- Add comprehensive README with step-by-step deployment guide
- Add credits to Kenerry Serain (original author)
- Remove personal documentation and teaching notes
- Clean up Account IDs and use placeholders
- Add troubleshooting sections (Grafana SSO, Subnet IPs)
- Add automation scripts (destroy-all.sh, rebuild-all.sh)
- Restore Karpenter CLI scripts and configurations

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,15 @@
 **/.terraform/*
 **/node_modules/*
 **/outputs.json
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
+
+# Backup files
+*.backup
+*.bkp
+**/backups/
 
 # Crash log files
 crash.log
