--- a/03-karpenter-auto-scaling/helm/values.yml
+++ b/03-karpenter-auto-scaling/helm/values.yml
@@ -1,3 +1,13 @@
+# Karpenter Helm Chart Values
+# Configurações para rodar o Karpenter Controller apenas nos nodes do Node Group original
+
+# Service Account com IRSA (IAM Roles for Service Accounts)
+serviceAccount:
+  name: karpenter
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::620958830769:role/karpenter-controller-role
+
+# Affinity: Força Karpenter a rodar APENAS em nodes do Node Group (não em nodes provisionados por ele mesmo)
 affinity:
   nodeAffinity:
     requiredDuringSchedulingIgnoredDuringExecution:
@@ -5,10 +15,25 @@ affinity:
       - matchExpressions:
         - key: karpenter.sh/nodepool
           operator: DoesNotExist
-        - key: eks.amazonaws.com/nodegroup
-          operator: In
-          values:
-          - ${NODEGROUP}
-  podAntiAffinity:
-    requiredDuringSchedulingIgnoredDuringExecution:
-      - topologyKey: "kubernetes.io/hostname"
+
+# Tolerations: Permite rodar em nodes do Node Group
+tolerations:
+  - key: CriticalAddonsOnly
+    operator: Exists
+
+# Replicas para alta disponibilidade
+replicas: 2
+
+# Resources para o controller
+controller:
+  resources:
+    requests:
+      cpu: 100m
+      memory: 256Mi
+    limits:
+      cpu: 1000m
+      memory: 1Gi
+
+# NodeSelector: Garante que rode apenas em nodes do Node Group original
+nodeSelector:
+  eks.amazonaws.com/nodegroup: ${NODEGROUP}
