fix: Replace hardcoded Account ID with placeholders
- Replace all occurrences of 620958830769 with <YOUR_ACCOUNT>
- Update README.md with correct placeholder instructions
- Add .gitignore rules for internal docs
- Total: 16 occurrences updated in 10 .tf files

BREAKING CHANGE: Users must now replace <YOUR_ACCOUNT> with their AWS Account ID

--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,10 @@ terraform.rc
 
 # Documentation privada (local only)
 docs/
+docs internos/
 RESUMO-VALIDACAO-GITHUB.md
+README copy.md
+*copy.md
 
 # Ansible sensitive files
 ansible/inventory/production.yml
