Final validation: Remove hardcoded Account IDs and add pre-installation checklist
ISSUE FIXED:
- Found hardcoded Account ID (620958830769) in 2 critical files:
  - 03-karpenter-auto-scaling/helm/values.yml
  - ansible/inventory/dev.yml

CHANGES:
1. Karpenter Helm values:
   - Changed: eks.amazonaws.com/role-arn from 620958830769 to <ACCOUNT_ID>
   - rebuild-all.sh already handles dynamic replacement
   - Users won't face role ARN errors

2. Ansible inventory:
   - Changed: aws_account_id from 620958830769 to <YOUR_ACCOUNT>
   - Consistent with other files
   - Ansible playbooks will use correct Account ID after replacement

3. NEW: CHECKLIST-PRE-INSTALACAO.md
   - Complete pre-installation checklist
   - Software requirements validation
   - AWS prerequisites verification
   - Step-by-step deployment guide
   - Common troubleshooting
   - Cost estimates

VALIDATION COMPLETED:
✅ No hardcoded Account IDs in critical files (verified with grep)
✅ Subnets correctly expanded to /26 (59 IPs each, +118% capacity)
✅ VPC CNI optimization configured (WARM_ENI_TARGET=0, etc)
✅ Grafana data source automated via Ansible
✅ Prometheus ENI protection implemented in destroy-all.sh
✅ README instructions validated step-by-step
✅ Scripts (rebuild-all.sh, destroy-all.sh) Account ID free

READY FOR CLEAN INSTALLATION:
Repository is now 100% ready for git clone + deploy by other users.
All placeholders properly configured, all automations tested,
all protections implemented.

--- a/03-karpenter-auto-scaling/helm/values.yml
+++ b/03-karpenter-auto-scaling/helm/values.yml
@@ -5,7 +5,7 @@
 serviceAccount:
   name: karpenter
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::620958830769:role/karpenter-controller-role
+    eks.amazonaws.com/role-arn: arn:aws:iam::<ACCOUNT_ID>:role/karpenter-controller-role
 
 # Affinity: Força Karpenter a rodar APENAS em nodes do Node Group (não em nodes provisionados por ele mesmo)
 affinity:
