refactor: organizar scripts em pasta dedicada
- Move rebuild-all.sh e destroy-all.sh para scripts/
- Remove scripts obsoletos (deploy-all-with-ansible.sh, rebuild-background.sh)
- Atualiza README.md com novos caminhos (scripts/*.sh)
- Adiciona 'scripts internos/' ao .gitignore
- Melhora organização do repositório

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ terraform.rc
 
 # Documentation privada (local only)
 docs internos/
+scripts internos/
 RESUMO-VALIDACAO-GITHUB.md
 README copy.md
 *copy.md
