chore: mover docs/ para local apenas (não commitar documentação interna)

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ validate-pre-commit.log05-monitoring/grafana-api-key.txt
 # Arquivos locais de desenvolvimento
 .local-only/
 .cleanup-summary.txt
+docs/
