feat: integrate Docker Hub luiz7030 for CI/CD pipeline
- Update CI workflow to pull images from luiz7030 instead of rslim087
- Add microservices with Dockerfiles for future builds
- Configure github-actions-eks user permissions in EKS cluster
- All 7 images now available in Docker Hub luiz7030
- ECR repositories created and populated for CI/CD flow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,13 +143,13 @@ jobs:
             echo "⚠️  Image not found in ECR, pulling from Docker Hub..."
             
             # Puxar imagem pública (retry em caso de timeout)
-            docker pull rslim087/${{ matrix.service }}:latest || \
-            (sleep 10 && docker pull rslim087/${{ matrix.service }}:latest) || \
-            (sleep 20 && docker pull rslim087/${{ matrix.service }}:latest)
+            docker pull luiz7030/${{ matrix.service }}:latest || \
+            (sleep 10 && docker pull luiz7030/${{ matrix.service }}:latest) || \
+            (sleep 20 && docker pull luiz7030/${{ matrix.service }}:latest)
             
             echo "🏷️  Tagging images..."
-            docker tag rslim087/${{ matrix.service }}:latest $IMAGE_URI
-            docker tag rslim087/${{ matrix.service }}:latest $IMAGE_URI_LATEST
+            docker tag luiz7030/${{ matrix.service }}:latest $IMAGE_URI
+            docker tag luiz7030/${{ matrix.service }}:latest $IMAGE_URI_LATEST
             
             echo "📤 Pushing to ECR..."
             docker push $IMAGE_URI
